more docs pages

--- a/apps/docs/src/app/page.mdx
+++ b/apps/docs/src/app/page.mdx
@@ -15,7 +15,7 @@ export const sections = []
 # API Documentation
 
 <WarningNote>
-  This document is a work in progress! Please reach out if you have any questions.
+  This document is a work in progress! Please [reach out](mailto:hello@mattrax.app) if you have any questions.
 </WarningNote>
 
 Welcome to the documentation for Mattrax MDM!
