--- a/apps/docs/src/app/getting-started/page.mdx
+++ b/apps/docs/src/app/getting-started/page.mdx
@@ -6,4 +6,22 @@ export const metadata = {
 
 # Getting started
 
+<WarningNote>
+  Mattrax has not yet reached public-beta.
+
+  We are currently in private-beta to ensure we can iron out the user experience. <br /> Please [reach out](mailto:hello@mattrax.app) if you think Mattrax is perfect for you.
+</WarningNote>
+
 Coming soon...
+
+{/* TODO: Onboarding guide for new users.
+
+Pre-requisites:
+ - Supported identity provider - EntraID
+
+Guide:
+ - Create tenant
+ - Configure slug
+ - Setup identity provider
+
+How to enroll your first device? */}
