--- a/apps/docs/src/app/self-hosting/page.mdx
+++ b/apps/docs/src/app/self-hosting/page.mdx
@@ -6,5 +6,13 @@ export const metadata = {
 
 # Self hosting
 
-Mattrax is currently not publicly available for self-hosting but [reach out](mailto:hello@mattrax.app) if you are interested in this option and we can discuss your requirements.
- 
+<WarningNote>
+  Mattrax is currently not publicly available for self-hosting.
+
+  We are focusing on the cloud product as it allows us to gain better insights. <br />
+  If your interesting in self-hosting [reach out](mailto:hello@mattrax.app) and we can discuss your requirements.
+</WarningNote>
+
+{/* TODO: Specs, network ports/URL/IP's that should be open */}
+
+{/* TODO: Installation instructions */}
