--- a/apps/docs/src/app/roadmap/page.mdx
+++ b/apps/docs/src/app/roadmap/page.mdx
@@ -8,6 +8,8 @@ export const metadata = {
 
 We have big plans that will become public very soon...
 
+For now checkout the [GitHub Issues](https://github.com/mattrax/Mattrax/issues) to see what we are working on.
+
 {/* Launching or something like that */}
 
 {/* Scripts - Bash & Powershell */}
