--- a/apps/docs/src/app/page.mdx
+++ b/apps/docs/src/app/page.mdx
@@ -24,11 +24,9 @@ Mattrax is a full mobile device management platform design to make managing your
 
 Features:
  - **Supports all platforms** - Supports **Windows, macOS and iOS** with Android and Linux coming soon
- - **Unified configuration** - Define your configuration once, and apply it to any operating systems
- - **Versioning** - Track changes, require your teams approval, quickly roll-back mistakes all built-in.
+ - **Shared configuration** - Share certain configurations between OS's
+ - **Versioning** - Track changes, require your teams approval, quickly roll-back mistakes all built-in
  - **Application & patch management** - Manage licences and keep everything up to date
- - **Bring your users with you** - Link with [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) or [Google Workspaces](https://workspace.google.com/intl/en_au/) to effortlessly bring in your users.
- - **Self-hosting** - Have special regulatory requirements? or just want to keep data in-house, no problem.
- - **Integrations** - Policy templates and REST API allow you to bring 3rd party software into Mattrax like it belongs.
-
-{/* TODO: Clarify policy templates by linking to the docs for them */}
+ - **Bring your users with you** - Link with [Microsoft Entra ID](https://www.microsoft.com/en-us/security/business/identity-access/microsoft-entra-id) or [Google Workspaces](https://workspace.google.com/intl/en_au/) to effortlessly bring in your users
+ - **Self-hosting** - Have special regulatory requirements? or just want to keep data in-house, no problem
+ - **Integrations** - Build and share custom policies, and REST API which allows you to integrate with your existing systems
