--- a/apps/docs/src/app/self-hosting/page.mdx
+++ b/apps/docs/src/app/self-hosting/page.mdx
@@ -16,3 +16,5 @@ export const metadata = {
 {/* TODO: Specs, network ports/URL/IP's that should be open */}
 
 {/* TODO: Installation instructions */}
+
+{/* TODO: Clarify that self-hosting will require a cloud connection for PNS and for EntraID (w/ Windows Full Enrollment) */}
